--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <!--TEXTO COMPLEMENTARIO-->
     <div class="container text-justify">
         <div class="row">
-            <div class="col-9">
+            <div class="col-9 mx-auto">
             <p><br>Hacemos entretenidas pijamadas a domicilio, ambientando espacios para una divertida experiencia para niñas y niños que potencian el aprendizaje y estimula los valores de la amistad. Abarcamos las comunas de Melipilla, Peñaflor, Talagante y El Monte, en la Región Metropolitana.<br><br>
             Reserva con nosotros, ¡Te esperamos!<br><br></p>
             </div>
