--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
                         <a class="nav-link" href="./paginas/quienes somos.html">Quiénes somos</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="./paginas/nuestros servicios.html">Nuestros Servicios</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./paginas/agenda con nosotros.html">Agenda con Nosotros</a>
+                    </li>                  
+                    <li class="nav-item">
                         <a class="nav-link" href="./paginas/contacto.html">Contacto</a>
                     </li>
                 </ul>
