--- a/paginas/Nuestros servicios.html
+++ b/paginas/Nuestros servicios.html
@@ -35,6 +35,9 @@
                         <a class="nav-link" href="../paginas/nuestros servicios.html">Nuestros Servicios</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="../paginas/agenda con nosotros.html">Agenda con Nosotros</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
                     </li>
                 </ul>
