se completa galería

--- a/paginas/contacto.html
+++ b/paginas/contacto.html
@@ -40,6 +40,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="../paginas/agenda con nosotros.html">Agenda con Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../paginas/galeria de imagenes.html">Galería de imágenes</a>
                     </li>  
                     <li class="nav-item">
                         <a class="nav-link" href="../paginas/contacto.html">Contacto</a>
